Fix recipe overview line wrap

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -17,17 +17,19 @@
 		margin: 0;
 
 		svg {
-			position: relative;
-			top: 6px;
+			position: absolute;
+			top: 2px;
+			left: 0px;
 		}
 
 		span {
-			margin: 0 18px 0 3px;
+			margin: 0 18px 0 0px;
 		}
 
 		li {
+			position: relative;
 			list-style: none;
-			padding: 0;
+			padding: 0 0 0 32px;
 			margin: 0;
 
 			@media #{$desktop} {
